# MyScaleDB

./: .clang-format  .gitignore  .gitlab-ci-build.yml  .gitlab-ci-chaos-test.yml  .gitlab-ci-functional-test.yml  .gitlab-ci-integration-test.yml  .gitlab-ci-performance-test.yml  .gitlab-ci-sanitizer-test.yml  .gitlab-ci-stability-test.yml  .gitlab-ci.yml  .gitmodules  .rsync-filter  BUILD.md  CMakeLists.txt  LICENSE  NOTICE.txt  README.md
.gitlab/issue_templates/: bug.md  enhancement.md  feature.md
.gitlab/merge_request_templates/: myscale_mr_template.md
base/base/: TypeName.h
cmake/: autogenerated_myscale_versions.txt  dbms_glob_sources.cmake  sanitize.cmake  version.cmake
contrib/: CMakeLists.txt
contrib/aws-cmake/: CMakeLists.txt
contrib/croaring-cmake/: CMakeLists.txt
docker/builder/: Dockerfile  README.md  build.py  sources.list.aliyun  sources.list.tuna  update-ccache-symlinks
docker/mqdb-client/: Dockerfile  entrypoint.sh
docker/mqdb-runtime/: Dockerfile  build.sh
docker/mqdb-ssh-client/: Dockerfile  backup.yml  entrypoint.sh  sshd_config
docker/mqdb-test/: Dockerfile  (+2 more)
myscale-design-docs/: TEMPLATE.md  vector-db-ci-test-design.md
programs/: CMakeLists.txt  clickhouse-diagnostics
rust/: CMakeLists.txt
rust/supercrate/: CMakeLists.txt  Cargo.toml
rust/supercrate/libs/blake3/: Cargo.toml
rust/supercrate/libs/skim/: Cargo.toml
rust/supercrate/src/: lib.rs
scripts/: apply-format  build_on_linux.sh  build_on_mac.sh  config_on_linux.sh  gen_data.sh  install_deps.sh  myscale_version_helper.py  rsync.sh  setup_build.sh
src/: CMakeLists.txt  configure_config.cmake
src/VectorIndex/: BruteForceSearch.cpp  BruteForceSearch.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  Dataset.h  DiskIOReader.cpp  DiskIOReader.h  DiskIOWriter.cpp  DiskIOWriter.h  IOReader.h  IOWriter.h  IndexException.h  IndexReader.h  MergeUtils.h  Metadata.cpp  Metadata.h  PartReader.cpp  PartReader.h  SearchThreadLimiter.h  SegmentId.h  Status Codes  Status.h  VectorIndexCommon.h  VectorIndexIO.h  VectorSegmentExecutor.cpp  VectorSegmentExecutor.h
src/VectorIndex/Cache/: CacheManager.cpp  CacheManager.h  PKCacheManager.cpp  PKCacheManager.h  PrimaryKeyCacheManager.cpp  PrimaryKeyCacheManager.h  VICacheManager.cpp  VICacheManager.h  VICacheObject.h  VectorIndexCacheObject.h
src/VectorIndex/Common/: BM25InfoInDataParts.cpp  BM25InfoInDataParts.h  BruteForceSearch.h  CacheManager.cpp  CacheManager.h  IndexBuildMemoryUsageHelper.cpp  IndexBuildMemoryUsageHelper.h  IndexException.h  IndexReadFromPart.cpp  IndexReadFromPart.h  IndexReader.h  Metadata.cpp  Metadata.h  ScanThreadLimiter.h  SearchThreadLimiter.h  SegmentId.cpp  SegmentId.h  VIBuildMemoryUsageHelper.cpp  VIBuildMemoryUsageHelper.h  VICommands.cpp  VICommands.h  VICommon.h  VIException.h  VIMetadata.cpp  VIMetadata.h  VIPartReader.cpp  VIPartReader.h  VIWithDataPart.cpp  VIWithDataPart.h  VectorDataset.h  VectorIndexCacheObject.h  VectorIndexCommon.h  VectorIndexIO.h  VectorIndexUtils.cpp  VectorIndexUtils.h  VectorScanUtils.cpp
src/VectorIndex/Interpreters/: GetHybridSearchVisitor.h  GetVSVisitor.h  GetVectorScanVisitor.h  VIEventLog.cpp  VIEventLog.h  VectorIndexEventLog.cpp  VectorIndexEventLog.h  parseVSParameters.cpp  parseVSParameters.h  parseVectorScanParameters.cpp  parseVectorScanParameters.h
src/VectorIndex/Parsers/: ASTVIDeclaration.cpp  ASTVIDeclaration.h  ASTVectorIndexDeclaration.cpp  ASTVectorIndexDeclaration.h
src/VectorIndex/Processors/: FusionSortingStep.cpp  FusionSortingStep.h  HybridSearchFusionTransform.cpp  HybridSearchFusionTransform.h  ReadWithHybridSearch.cpp  ReadWithHybridSearch.h  ReadWithVS.cpp  ReadWithVS.h  ReadWithVectorScan.cpp  ReadWithVectorScan.h  VSRecomputeTransform.cpp  VSRecomputeTransform.h  VSSplitTransform.cpp  VSSplitTransform.h  VectorScanRecomputeTransform.cpp  VectorScanRecomputeTransform.h  VectorScanSplitTransform.cpp  VectorScanSplitTransform.h
src/VectorIndex/Storages/: HybridSearchResult.h  MergeTreeBaseSearchManager.cpp  MergeTreeBaseSearchManager.h  MergeTreeDataPartVectorIndex.cpp  MergeTreeDataPartVectorIndex.h  MergeTreeHybridSearchManager.cpp  MergeTreeHybridSearchManager.h  MergeTreeSelectWithHybridSearchProcessor.cpp  MergeTreeSelectWithHybridSearchProcessor.h  MergeTreeSelectWithVSProcessor.cpp  MergeTreeSelectWithVSProcessor.h  MergeTreeSelectWithVectorScanProcessor.cpp  MergeTreeSelectWithVectorScanProcessor.h  MergeTreeTextSearchManager.cpp  MergeTreeTextSearchManager.h  MergeTreeVSManager.cpp  MergeTreeVSManager.h  MergeTreeVectorScanManager.cpp  MergeTreeVectorScanManager.h  MergeTreeVectorScanUtils.cpp  MergeTreeVectorScanUtils.h  PrimaryKeyCacheManager.cpp  PrimaryKeyCacheManager.h  ReplicatedMergeTreeBuildVIStrategyPicker.cpp  ReplicatedMergeTreeBuildVIStrategyPicker.h  ReplicatedMergeTreeBuildVIndexStrategyPicker.cpp  ReplicatedMergeTreeBuildVIndexStrategyPicker.h  ReplicatedVITask.cpp  ReplicatedVITask.h  ReplicatedVectorIndexTask.cpp  ReplicatedVectorIndexTask.h  StorageFtsIndex.cpp  StorageFtsIndex.h  StorageFullTextSearch.cpp  StorageFullTextSearch.h  StorageSystemVIs.cpp  StorageSystemVIs.h  StorageSystemVIsWithPart.cpp  StorageSystemVIsWithPart.h  VIBuilderUpdater.cpp  (+30 more)
src/VectorIndex/TableFunctions/: TableFunctionFtsIndex.cpp  TableFunctionFtsIndex.h  TableFunctionFullTextSearch.cpp  TableFunctionFullTextSearch.h
src/VectorIndex/Utils/: CommonUtils.cpp  CommonUtils.h  HybridSearchUtils.cpp  HybridSearchUtils.h  MergeTreeVectorScanUtils.cpp  MergeTreeVectorScanUtils.h  VIUtils.cpp  VIUtils.h  VSUtils.cpp  VSUtils.h  VectorIndexUtils.cpp  VectorIndexUtils.h  VectorScanUtils.cpp  VectorScanUtils.h
tests/: .gitignore  clickhouse-test  tsan_suppressions.txt
(+843 files in other folders)
