[package]
name = "skim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skim = "0.10.2"
cxx = "1.0.83"
term = "0.7.0"

[build-dependencies]
cxx-build = "1.0.83"

[lib]
crate-type = ["staticlib", "rlib"]

[profile.release]
debug = true
